<resources>

    <!-- Splash Screen -->
    <string name="splash_api_unreachable">OWM API not available</string>

    <!-- Credits screen -->
    <string name="app_name" translatable="false">Yawa</string>
    <string name="titleTextview" translatable="false">YAWA - Yet Another Weather App</string>
    <string name="by">By</string>
    <string name="textviewText" translatable="false">João Almeida</string>
    <string name="jo_o_lopes" translatable="false">João Lopes</string>
    <string name="tiago_santos" translatable="false">Tiago Santos</string>
    <string name="person3_url" translatable="false">https://github.com/A39120</string>
    <string name="person2_url" translatable="false">https://github.com/TiagoSSantos</string>
    <string name="person1_url" translatable="false">https://github.com/joaoccalmeida</string>
    <string name="jo_o_almeida" translatable="false">João Almeida</string>
    <string name="github" translatable="false">github</string>

    <!-- CurrentDay screen -->
    <string name="insert_country_edit_text">Insert a city...</string>
    <string name="could_not_download_icon_for_weather">Could not download icon for weather</string>
    <string name="about_us">About us</string>
    <string name="language" translatable="false">Language/Idioma</string>
    <string name="refresh">Refresh</string>
    <string name="connection_problem_wifi_off">Could not establish connection (Wifi is turned off)</string>
    <string name="language_set_to">Language set to:</string>
    <string name="get_curday_text">Getting current day\'s weather for</string>
    <string name="get_curday_updating_text">Updating weather info</string>
    <string name="snow">Snow Volume</string>
    <string name="precipitation">Precipitation</string>
    <string name="curday_other_info">Wind Speed: %1$.2f %2$s\nWind Direction: %3$s\nCloudiness: %4$d %% %5$s %6$s\nHumidity: %7$d %%\nMax Temp: %8$.2f %9$s\nMin Temp: %10$.2f %11$s\nPressure: %12$.2f hpa\nSunrise: %13$s \nSunset: %14$s\nLast updated at: %15$s</string>

    <string name="forday_other_info">Weather info for: %19$s\nWind Speed: %1$.2f %2$s\nWind Direction: %3$s\nCloudiness: %4$d %% %5$s %6$s\nHumidity: %7$d %%\nPressure: %8$.2f hpa\nMax Temp: %9$.2f %10$s\nMin Temp: %11$.2f %12$s\nNight Temperature: %13$.2f %14$s\nEvening Temperature: %15$.2f %16$s\nMorning Temperature:%17$.2f %18$s</string>
    <string name="forecast">Forecast</string>
    <string name="today">Today</string>
    <string name="in_x_day">in %1$d day</string>

    <!-- Preference Activity screen -->
    <string name="pref_insertCity">Insert City...</string>
    <string name="pref_sub">Subscribe</string>
    <string name="pref_unsub">Unsubscribe</string>
    <string name="pref_favloc">Favourite Location:</string>
    <string name="pref_refreshInterval">Weather data refresh interval:</string>
    <string name="preferences">Preferences</string>
    <string name="pref_timeForNotifications">Time for notifications:</string>
    <string name="pref_batterySaveAt">Battery saving at:</string>
    <string name="pref_useMobileData">Allow updating using mobile data</string>

    <string-array name="pref_refresh_interval_values">
        <item>12 hours</item>
        <item>1 day</item> <!-- <item>24h</item> -->
        <item>2 days</item> <!-- <item>48h</item> -->
    </string-array>

    <string-array name="pref_battery_interval_values">
        <item>100 %</item>
        <item>90 %</item>
        <item>80 %</item>
        <item>70 %</item>
        <item>60 %</item>
        <item>50 %</item>
        <item>40 %</item>
        <item>30 %</item>
        <item>20 %</item>
        <item>10 %</item>
    </string-array>

    <string name="weather_for">Weather for</string>
    <string name="min_temp">Min Temp:</string>
    <string name="min_temp_text1">It\'s freezing, get some really warm clothes, some gloves and a bonnet.</string>
    <string name="min_temp_text2">It\'s really cold, wear some warm clothes.</string>
    <string name="min_temp_text3">It might be fresh outside, don\'t go with a t-shirt only.</string>
    <string name="default_temp_msg">It\'s a good temperature.</string>
    <string name="max_temp_text1">It\'s hot outside, bring some sunglasses.</string>
    <string name="max_temp">Max Temp:</string>
    <string name="max_temp_text2">It\'s realy hot outside, wear sun screen and some sunglasses.</string>
    <string name="wind_text1">It\'s a bit windy, you might wear an extra layer of clothes.</string>
    <string name="wind_text2">The wind is blowing hard, be careful when going outside.</string>
    <string name="wind_text3">Storm winds, go outside only if you must.</string>
    <string name="wind_text4">Hurricane warning, stay indoors and protect yourself.</string>
    <string name="default_wind_msg">Light or no wind.</string>
    <string name="rain_text1">It\'s raining lightly, you might wanna bring an umbrella with you.</string>
    <string name="rain_text2">Moderate rain, don\'t forget the umbrella!</string>
    <string name="rain_text3">Heavy rain, be careful when going outside.</string>
    <string name="rain_text4">Torrential rain, stay indoors.</string>
    <string name="default_rain_msg">No rain.</string>

</resources>
