<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_forecast"
        android:icon="@drawable/forecast"
        android:title="@string/forecast"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/en_flag"
        android:title="@string/language"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_preferences"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/preferences"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_credits"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about_us"
        app:showAsAction="ifRoom|withText" />
</menu>