<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preference"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="isel.pdm.trab.openweathermap.presentation.PreferencesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/subscribeText"
                    android:layout_weight="1"
                    android:hint="@string/pref_insertCity" />

                <Button
                    android:text="@string/pref_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/subscribeButton" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/unsubscribeSpinner" />

                <Button
                    android:text="@string/pref_unsub"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/unsubscribeButton" />
            </LinearLayout>

            <TextView
                android:text="@string/pref_favloc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/favouriteLocationText" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:id="@+id/favouriteLocationSpinner" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/pref_refreshInterval"
                    android:layout_height="match_parent"
                    android:id="@+id/refreshIntervalText"
                    android:layout_width="wrap_content" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:id="@+id/refreshIntervalSpinner" />
            </LinearLayout>

            <Button
                android:text="@string/pref_savePref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/savePreferencesButton" />

            <TextView
                android:text="@string/pref_cancelTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/preferencesHintText" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
